--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
+allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -119,7 +120,6 @@ allow 114.35.245.150;
 allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
-allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
@@ -165,6 +165,7 @@ allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 161.35.129.51;
@@ -198,7 +199,6 @@ allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.105.161.162;
 allow 172.232.164.52;
-allow 172.235.29.198;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 172.81.131.139;
@@ -299,7 +299,6 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
-allow 185.181.61.142;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -500,7 +499,6 @@ allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
-allow 185.243.218.35;
 allow 185.243.23.81;
 allow 185.244.192.175;
 allow 185.244.192.184;
@@ -682,6 +680,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -960,7 +959,6 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -1198,8 +1196,6 @@ allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:6f20:531::254;
 allow 2a03:94e0:2660:4819:623:8331:4852:1;
-allow 2a03:94e0:ffff:185:181:61:0:142;
-allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1231,7 +1227,6 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1653,7 +1648,6 @@ allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
-allow 54.36.209.253;
 allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
@@ -1694,6 +1688,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1712,7 +1707,6 @@ allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
@@ -1788,7 +1782,6 @@ allow 94.102.51.15;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
-allow 94.158.246.65;
 allow 94.16.112.22;
 allow 94.16.115.121;
 allow 94.16.116.81;
