--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -130,7 +131,6 @@ deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
-deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -367,8 +367,6 @@ deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 deny 2a03:6f20:531::254;
 deny 2a03:94e0:2660:4819:623:8331:4852:1;
-deny 2a03:94e0:ffff:185:181:61:0:142;
-deny 2a03:94e0:ffff:185:243:218:0:35;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
@@ -400,7 +398,6 @@ deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
