--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
-allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -166,7 +165,6 @@ allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 161.35.129.51;
@@ -658,6 +656,7 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
+allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -679,7 +678,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -953,6 +951,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -980,6 +979,7 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1224,6 +1224,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1420,7 +1421,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1613,7 +1613,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1663,6 +1662,7 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1672,7 +1672,6 @@ allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
 allow 77.221.159.192;
-allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.37.3.7;
 allow 77.48.28.193;
@@ -1701,17 +1700,18 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.247.165.51;
 allow 84.252.120.163;
 allow 85.17.9.83;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 86.104.73.167;
@@ -1786,10 +1786,7 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
-allow 94.177.106.37;
 allow 94.177.106.54;
-allow 94.177.106.55;
-allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
