--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -119,6 +119,7 @@ set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
+set_real_ip_from 125.253.31.196;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
@@ -1056,6 +1057,7 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
+set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.93.218.204;
