--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.164.54.199;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.186.0.144;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
@@ -289,7 +290,6 @@ set_real_ip_from 185.132.53.12;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
@@ -1193,7 +1193,6 @@ set_real_ip_from 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:6f20:531::254;
-set_real_ip_from 2a03:94e0:2660:4819:623:8331:4852:1;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -1421,6 +1420,7 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1702,7 +1702,6 @@ set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
-set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
@@ -1714,6 +1713,7 @@ set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.17.9.83;
+set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
 set_real_ip_from 86.104.73.167;
