--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -463,7 +464,6 @@ allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::141;
-allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
