--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -135,7 +135,6 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
-allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
@@ -153,6 +152,7 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -302,6 +302,9 @@ allow 2620:18c:0:192::229;
 allow 2620:18c:0:192::230;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
+allow 2804:391c:0:18:1c00:6eff:fe00:cf;
+allow 2804:391c:0:18:1c00:91ff:fe00:d2;
+allow 2804:391c:0:18:1c00:d3ff:fe00:d1;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
@@ -385,7 +388,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
